Main Page Translation

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <nav>
                     <img src="./images/logo.png" class="logo">
                     <ul id="sidemenu">
-                        <li><a href="#inicio" onclick="closemenu()">Inicio</a></li>
-                        <li><a href="#sobre_mi" onclick="closemenu()">Sobre Mi</a></li>
-                        <li><a href="#servicios" onclick="closemenu()">Servicios</a></li>
-                        <li><a href="#proyectos" onclick="closemenu()">Proyectos</a></li>
-                        <li><a href="#contacto" onclick="closemenu()">Contacto</a></li>
+                        <li><a href="#inicio" onclick="closemenu()">Home</a></li>
+                        <li><a href="#sobre_mi" onclick="closemenu()">About Me</a></li>
+                        <li><a href="#servicios" onclick="closemenu()">Services</a></li>
+                        <li><a href="#proyectos" onclick="closemenu()">Projects</a></li>
+                        <li><a href="#contacto" onclick="closemenu()">Contact Me</a></li>
                         <i class="fas fa-times" onclick="closemenu()"></i>
                     </ul>
                     <i class="fas fa-bars" onclick="openmenu()"></i>
                 </nav>
                 <div class="header-text">
-                    <h4>¡Hola! Soy</h4>
+                    <h4>¡Hello! I am</h4>
                     <h1>Paolo <span>Reyes</span></h1>
-                    <h3>Ingeniero en Robótica</h3>
+                    <h3>Robotics Engineer</h3>
                 </div>
             </div>
         </div>
@@ -43,35 +43,38 @@
                         <img src="./images/paolo.JPG">
                     </div>
                     <div class="about-col-2">
-                        <h1 class="subtitle">Acerca de Mi</h1>
-                        <h5 class="subsubtitle">Robotista <span>& Programador</span></h5>
-                        <p align="justify">Soy un estudiante de ingeniería en robótica y sistemas digitales en el Tecnológico de Monterrey. Actualmente fungo como mentor de diversos equipos de robótica a nivel nacional para la universidad Tecmilenio y manejo un canal de Youtube donde hago videos de temas complejos de ingeniería de manera didáctica.<br>A lo largo de mi vida me he especializado en el área de la robótica en dónde soy capaz de elaborar robots complejos por mi cuenta incluyendo el modelado 3D, construcción, cableado y programación.<br>Diversificarme en todas estas áreas me ha traido habilidades importantes como la especialización en diseño mecánico de sistemas robóticos, la operación de máquinas y herramientas complejas como CNC's, la construcción de sistemas digitales para aplicaciones específicas y el dominio de lenguajes de programación backend.</p>
+                        <h1 class="subtitle">About Me</h1>
+                        <h5 class="subsubtitle">Robotist <span>& Coder</span></h5>
+                        <p align="justify">
+                            I am a student of Robotics and Digital Systems Engineering at Tecnológico de Monterrey. Currently, I work at General Electric in the Embedded Software Quality Test Intern Position in Querétaro, MX and I also manage a YouTube channel where I create educational videos on complex engineering topics.<br>
+                            Throughout my life, I have specialized in the field of robotics, where I am capable of independently developing complex robots, including 3D modeling, construction, wiring, and programming.<br>
+                            Diversifying my skills in all these areas has provided me with important abilities such as expertise in mechanical design of robotic systems, operating complex machines and tools such as CNCs, building digital systems for specific applications, and mastering backend programming languages.</p>
                         <div class="tab-titles">
-                            <p class="tab-links active-link" onclick="opentab('skills')">Habilidades</p>
-                            <p class="tab-links" onclick="opentab('experience')">Experiencia</p>
-                            <p class="tab-links" onclick="opentab('education')">Educación</p>
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>Programación Backend y Frontend</span><br>Programación HTML, CSS, JavaScript, Python, C++, Java, PHP, SQL.</li>
-                                <li><span>Diseño 3D y Simulaciones.</span><br>Manejo de Solidworks para Modelado de Sistemas Mecánicos y Simulaciones de Optimización y Resistencia.</li>
-                                <li><span>Manufactura</span><br>Operación de máquinas CNC.</li>
-                                <li><span>Electrónica</span><br>Diseño de Sistemas Digitales y Programación Eficiente de Microcontroladores</li>
-                                <li><span>Producción</span><br>Edición de fotografía y video.</li>
-                                <li><span>Inglés</span><br>Nivel B2.</li>
+                                <li><span>Full Stack Developer</span><br>HTML, CSS, JavaScript, Python, C++, C, Java, PHP, SQL, MATLAB, Processing.</li>
+                                <li><span>3D Mechanical Design</span><br>I have been working to create +50Kg robots for the last 4 years using SolidWorks where I have a CSWP certification.</li>
+                                <li><span>Manufacturing</span><br>I am a CNC machinist and proficient in manual metal and woodworking.</li>
+                                <li><span>Electronics</span><br>I specialize in digital systems design and efficient programming of microcontrollers.</li>
+                                <li><span>Video Production</span><br>Video editing and Photography.</li>
+                                <li><span>English</span><br>C1 level.</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2023 - Actualidad</span><br>Embedded Software Quality Test Intern en General Electric.</li>
-                                <li><span>2022</span><br>Mentor de Ingeniería para 28 equipos de Robótica de México.</li>
-                                <li><span>2022 - 2022</span><br>Líder de Sistemas de Control para el equipo Mexicano de Robótica "Robociety".</li>
-                                <li><span>2018 - 2021</span><br>Líder de Ingeniería para el equipo Mexicano de Robótica "WinT 3794".</li>
+                                <li><span>2023 - Today</span><br>Embedded Software Quality Test Intern at General Electric.</li>
+                                <li><span>2022</span><br>Mentor for 28 robotics engineering teams in Mexico.</li>
+                                <li><span>2022 - 2022</span><br>Control Systems Leader for the Mexican Robotics Team "Robociety".</li>
+                                <li><span>2018 - 2021</span><br>Engineering Leader for the Mexican Robotics Team "WinT 3794".</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2021 - 2025</span><br>Ingeniería en Robótica y Sistemas Digitales en el Tecnológico de Monterrey.</li>
+                                <li><span>2021 - 2025</span><br>Robotics and Digital Systems Engineering at Tecnológico de Monterrey.</li>
                             </ul>
                         </div>
                     </div>
@@ -81,25 +84,25 @@
         <!-- Servicios -->
         <div id="servicios">
             <div class="container">
-                <h1 class="subtitle">Mis Servicios</h1>
+                <h1 class="subtitle">My Services</h1>
                 <div class="services-list">
                     <div>
                         <i class="fa-solid fa-screwdriver-wrench"></i>
-                        <h2>Manufactura de Piezas</h2>
-                        <p align="justify">Puedo ayudarte a traer a la vida cualquier proyecto manufacturando cualquier pieza con mis máquinas CNC.</p>
-                        <a href="./servicios/manufactura">¿Quieres saber más?</a>
+                        <h2>Part Manufacturing</h2>
+                        <p align="justify">I can help bring any project to life by manufacturing any part using my CNC machines.</p>
+                        <a href="./servicios/manufactura">Learn More...</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
-                        <h2>Automatización</h2>
-                        <p align="justify">Puedo ayudarte a automatizar procesos en tu empresa por medio de la creación de programas a tu medidad que puedan reducir costos como la autogestión de inventario, control de empleados, etc.</p>
-                        <a href="./servicios/automatizacion">¿Quieres saber más?</a>
+                        <h2>Automation</h2>
+                        <p align="justify">I can assist you in automating processes in your company through the creation of customized programs that can reduce costs, such as inventory self-management, employee control, and more.</p>
+                        <a href="./servicios/automatizacion">Learn More...</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
-                        <h2>Desarrollo de Dispositivos Electrónicos</h2>
-                        <p align="justify">Puedo ayudarte a inventar cualquier dispositivo electrónico que te facilite tus actividades diarias como contadores de aforo para tu negocio, juguetes a control remoto, luces que se conecten a alexa o cualquier otro dispositivo IoT.</p>
-                        <a href="./servicios/desarrollo">¿Quieres saber más?</a>
+                        <h2>Development of Electronic Devices</h2>
+                        <p align="justify">I can help you invent any electronic device that can enhance your daily activities, such as occupancy counters for your business, remote-controlled toys, lights that connect to Alexa, or any other IoT device.</p>
+                        <a href="./servicios/desarrollo">Learn More...</a>
                     </div>
                 </div>
             </div>
@@ -107,13 +110,13 @@
         <!-- Proyectos -->
         <div id="proyectos">
             <div class="container">
-                <h1 class="subtitle">Mis Proyectos</h1>
+                <h1 class="subtitle">My Projects</h1>
                 <div class="work-list-main">
                     <div class="work"></div>
                     <div class="work"></div>
                     <div class="work"></div>
                 </div>
-                <a href="proyectos" class="btn">Ver más</a>     
+                <a href="proyectos" class="btn">See more</a>     
             </div>
         </div>
         <!-- Contacto -->
@@ -121,7 +124,7 @@
             <div class="container">
                 <div class="row">
                     <div class="contact-left">
-                        <h1 class="subtitle">Contáctame</h1>
+                        <h1 class="subtitle">Contact Me</h1>
                         <p><i class="fas fa-paper-plane"></i>contactopaoloinspires@gmail.com</p>
                         <div class="social-icons">
                             <a href="https://www.facebook.com/paolo.reyes.3114935" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -129,20 +132,20 @@
                             <a href="https://www.instagram.com/yosoypaolo254" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
-                        <a href="./resources/CV-PaoloReyes.pdf" class="btn btn2">Descargar CV</a>
+                        <a href="./resources/CV-PaoloReyes.pdf" class="btn btn2">Resume</a>
                     </div>
                     <div class="contact-right">
                         <form name="enviar">
-                            <input type="text" name="Name" placeholder="Nombre" required id="nombre">
-                            <input type="email" name="Email" placeholder="Correo" required id="correo_destino">
-                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" required id="mensaje"></textarea>
+                            <input type="text" name="Name" placeholder="Name" required id="nombre">
+                            <input type="email" name="Email" placeholder="Email" required id="correo_destino">
+                            <textarea name="Message" rows="6" placeholder="Message" required id="mensaje"></textarea>
                             <div class="captcha">
                                 <h2 class="subsubtitle">CAPTCHA: </h2>
                                 <div id="image" class="inline" selectable="False"></div>
                                 <i class="fa-solid fa-arrows-rotate reload" onclick="generate()"></i>
                             </div>
                             <input type="text" id="captcha" placeholder="Captcha">
-                            <button type="button" class="btn btn2" onclick="send_mail()">Enviar</button>
+                            <button type="button" class="btn btn2" onclick="send_mail()">Send</button>
                         </form>
                         <span id="msg"></span>
                     </div>
