Main Subpages Updated

--- a/servicios/automatizacion.html
+++ b/servicios/automatizacion.html
@@ -4,27 +4,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez automatización">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Automation">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Automatización</title>
+        <title>Automation</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
         <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>Servicio de Automatización</h2>
+            <h2>Automation Service</h2>
             <span></span>
         </div>
         <div id="Que_Hacemos">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿Qué Hacemos?</h1>
+                    <h1 class="subtitle">¿What do we do?</h1>
                     <div class="small-description">
                         <img src="../images/python.jpg">
-                        <p align="justify">Podemos ayudarte a hacer tu vida más sencilla, si en tu día a día o en tu negocio tiendes a tener que hacer tareas repetitivas en la computadora nosotros podemos crear un programa que pueda hacer estas tareas por ti. Entre sus muchas virtudes la automatización nos permite pasar datos de un sitio a otro por ejemplo de una página web a un excel, generar datos aleatorios, administrar el inventario de un negocio en tiempo real desde tu teléfono y cualquier otra aplicación que se te pueda ocurrir, el límite son tus necesidades.</p>
+                        <p align="justify">We can help simplify your life by creating programs that automate repetitive tasks on your computer. Among its many benefits, automation allows us to transfer data from one place to another, such as from a website to an Excel spreadsheet. It can generate random data, manage real-time inventory for your business from your phone, and fulfill any other application you can imagine. The limit is based on your needs.</p>
                         <img src="../images/python.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Algunos Ejemplos</h1>
+                <h1 class="subtitle">Some Examples</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/python_example_1.png">
@@ -50,8 +50,8 @@
             <div class="container">
                 <div class="row">
                     <div class="contact-left">
-                        <h1 class="subtitle">Cotizaciones</h1>
-                        <p align="justify" class="instructions">Por favor comunícate por alguno de estos medios o dejando tu mensaje en la parte de la derecha y yo me pondré en contacto contigo en un lapso menor a 24 horas para hablar sobre tu proyecto.</p>
+                        <h1 class="subtitle">Pricing</h1>
+                        <p align="justify" class="instructions">Please get in touch through one of these methods or leave your message on the right-hand side, and I will contact you within 24 hours to discuss your project.</p>
                         <p><i class="fas fa-paper-plane"></i>contactopaoloinspires@gmail.com</p>
                         <div class="social-icons">
                             <a href="https://www.facebook.com/paolo.reyes.3114935" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -62,16 +62,16 @@
                     </div>
                     <div class="contact-right">
                         <form name="enviar">
-                            <input type="text" name="Name" placeholder="Nombre" required id="nombre">
-                            <input type="email" name="Email" placeholder="Correo" required id="correo_destino">
-                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" required id="mensaje"></textarea>
+                            <input type="text" name="Name" placeholder="Name" required id="nombre">
+                            <input type="email" name="Email" placeholder="Email" required id="correo_destino">
+                            <textarea name="Message" rows="6" placeholder="Message" required id="mensaje"></textarea>
                             <div class="captcha">
                                 <h2 class="subsubtitle">CAPTCHA: </h2>
                                 <div id="image" class="inline" selectable="False"></div>
                                 <i class="fa-solid fa-arrows-rotate reload" onclick="generate()"></i>
                             </div>
                             <input type="text" id="captcha" placeholder="Captcha">
-                            <button type="button" class="btn btn2" onclick="send_mail()">Enviar</button>
+                            <button type="button" class="btn btn2" onclick="send_mail()">Send</button>
                         </form>
                         <span id="msg"></span>
                     </div>
