--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -8,23 +8,23 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Manufactura</title>
+        <title>Manufacturing</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
         <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>Servicio de Manufactura de Piezas</h2>
+            <h2>Part Manufacturing Service</h2>
             <span></span>
         </div>
         <div id="Que_Hacemos">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿Qué Hacemos?</h1>
+                    <h1 class="subtitle">¿What do we do?</h1>
                     <div class="small-description">
                         <img src="../images/cnc.jpg">
-                        <p align="justify">Traemos a la realidad cualquier pieza bidimensional en cualquier material con el uso de fresadoras CNC, entre sus muchas aplicaciones este servicio es mayormente usado para la fabricación a medida de decoraciones de negocios, producción de piezas estructurales para sistemas mecánicos y robots de competencia.</p>
+                        <p align="justify">We bring any two-dimensional piece to life in any material using CNC milling machines. Among its many applications, this service is mainly used for custom manufacturing of business decorations, production of structural parts for mechanical systems, and competition robots.</p>
                         <img src="../images/cnc.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Algunos Ejemplos</h1>
+                <h1 class="subtitle">Some Examples</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/cnc_example_1.png">
@@ -50,8 +50,8 @@
             <div class="container">
                 <div class="row">
                     <div class="contact-left">
-                        <h1 class="subtitle">Cotizaciones</h1>
-                        <p align="justify" class="instructions">Por favor comunícate por alguno de estos medios o dejando tu mensaje en la parte de la derecha y yo me pondré en contacto contigo en un lapso menor a 24 horas para hablar sobre tu proyecto.</p>
+                        <h1 class="subtitle">Pricing</h1>
+                        <p align="justify" class="instructions">Please get in touch through one of these methods or leave your message on the right-hand side, and I will contact you within 24 hours to discuss your project.</p>
                         <p><i class="fas fa-paper-plane"></i>contactopaoloinspires@gmail.com</p>
                         <div class="social-icons">
                             <a href="https://www.facebook.com/paolo.reyes.3114935" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -61,17 +61,17 @@
                         </div>
                     </div>
                     <div class="contact-right">
-                        <form name="enviar" method="post">
-                            <input type="text" name="Name" placeholder="Nombre" required id="nombre">
-                            <input type="email" name="Email" placeholder="Correo" required id="correo_destino">
-                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" required id="mensaje"></textarea>
+                        <form name="enviar">
+                            <input type="text" name="Name" placeholder="Name" required id="nombre">
+                            <input type="email" name="Email" placeholder="Email" required id="correo_destino">
+                            <textarea name="Message" rows="6" placeholder="Message" required id="mensaje"></textarea>
                             <div class="captcha">
                                 <h2 class="subsubtitle">CAPTCHA: </h2>
                                 <div id="image" class="inline" selectable="False"></div>
                                 <i class="fa-solid fa-arrows-rotate reload" onclick="generate()"></i>
                             </div>
                             <input type="text" id="captcha" placeholder="Captcha">
-                            <button type="button" class="btn btn2" onclick="send_mail()">Enviar</button>
+                            <button type="button" class="btn btn2" onclick="send_mail()">Send</button>
                         </form>
                         <span id="msg"></span>
                     </div>
