--- a/proyectos.html
+++ b/proyectos.html
@@ -8,13 +8,13 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" href="./images/icon.ico">
-        <title>Proyectos</title>
+        <title>Projects</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header-subpage">
             <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
-            <h2>Mis Proyectos</h2>
+            <h2>My Projects</h2>
             <span></span>
         </div>
         <div id="select-container">
@@ -22,18 +22,18 @@
                 <div class="options-container">
                     <div class="option">
                         <input type="radio" class="radio" id="MasReciente" name="category">
-                        <label for="MasReciente">Más Reciente</label>
+                        <label for="MasReciente">Newer</label>
                     </div>
                     <div class="option">
                         <input type="radio" class="radio" id="MasAntiguo" name="category">
-                        <label for="MasAntiguo">Más Antiguo</label>
+                        <label for="MasAntiguo">Older</label>
                     </div>
                     <div class="option">
                         <input type="radio" class="radio" id="A-Z" name="category">
                         <label for="A-Z">A-Z</label>
                     </div>
                 </div>
-                <div class="selected">Más Reciente</div>
+                <div class="selected">Newer</div>
             </div>
         </div>
         <div class="container">
